update last slide issues and continue working with flexbox to align quiz'

--- a/css/style.css
+++ b/css/style.css
@@ -8,66 +8,55 @@ body {
   flex-flow: column;
   justify-content: center;
   align-items: center;
+  height: 100vh;
+  width: 100vw;
 }
 
-  .container {
-    display: flex;
-    flex-flow: column;
-    height: 80vh;
-    width: 80vh;
-    margin-top: 5vh;
-    display: flex;
-    flex-flow: column;
-    justify-content: center;
-    align-items: center;
-  }
-
     .clock {
-      height: 10vh;
-    }
-
-    button {
-      align-content: flex-end;
+      align-content: center;
     }
 
     #results {
       display: flex;
+      align-content: center;
     }
 
-    #quiz {
-      display: grid;
+    .quiz-container {
+      display: flex;
+      flex-flow: column wrap;
+      height: 500px;
+      width: 500px;
     }
 
-      img {
-        height: 40vh;
-        width: 40vh;
-        align-content: flex-start;
-      }
-      .answers {
-        display: flex;
-        flex-flow: column;
-        align-content: flex-start;
-      }
-
-      .question {
-        align-content: flex-end;
-      }
-
-      .slide{
-        position: absolute;
-        left: 0px;
-        top: 0px;
-        width: 100%;
+      .slide {
         display: none;
         /* z-index: 1;
         opacity: 0;
         transition: opacity 0.5s; */
         };
 
-        .active-slide{
+        .active-slide {
         /* opacity: 1;
         z-index: 2; */
-        display: inline-block;
-        align-content: center;
+        display: flex;
         };
+      
+          img {
+            height: 250px;
+            width: 250px;
+            align-self: flex-start;
+          }
+          .answers {
+            align-items: flex-start;
+            flex-direction: column nowrap;
+          }
+
+          .question {
+            align-items: flex-end;
+          }
+
+          #buttons {
+           align-items: flex-end;
+                }
+
 
